force-app/main/default/objects/Employee__c/fields/Count_of_Projects__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Projects__c</fullName>
    <label>Count of Projects</label>
    <summaryForeignKey>ProjectAssignment__c.Employee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>