force-app/main/default/objects/Employee__c/fields/Country_based_on_Phone__c.field-meta.xml
<CustomField>
    <fullName>Country_based_on_Phone__c</fullName>
    <formula>IF(CONTAINS(Phone__c, &apos;+18&apos;), &apos;US&apos;, &apos;Not defined&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country based on Phone</label>
    <type>Text</type>
</CustomField>