force-app/main/default/objects/Employee__c/fields/HR_Manager__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>