force-app/main/default/objects/Employee__c/fields/Practice_Unit__c.field-meta.xml
<CustomField>
    <fullName>Practice_Unit__c</fullName>
    <label>Practice Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.NET</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>