force-app/main/default/objects/Employee__c/validationRules/Unit_is_Salesforce_phone_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_is_Salesforce_phone_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Practice_Unit__c ,&apos;Salesforce&apos;), ISBLANK(Phone__c))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>For Salesforce practice, employee phone is mandatory</errorMessage>
</ValidationRule>