force-app/main/default/objects/Employee__c/listViews/Internal_Employees.listView-meta.xml
<ListView>
    <fullName>Internal_Employees</fullName>
    <columns>NAME</columns>
    <columns>Internal_Number__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Practice_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employee__c.Internal</value>
    </filters>
    <label>Internal Employees</label>
</ListView>